# ebpf-xdp-playground

./: Cargo.toml  README.md
.vim/: ls-settings.json
ebpf-balancer/: Cargo.toml
ebpf-balancer-common/: Cargo.toml
ebpf-balancer-common/src/: lib.rs
ebpf-balancer-ebpf/: Cargo.toml
ebpf-balancer-ebpf/src/: bindings.rs  constants.rs  main.rs
ebpf-balancer/src/: main.rs
server/src/: main.rs
xtask/src/: build_ebpf.rs  codegen.rs  run.rs
