[package]
name = "ebpf-balancer"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { version = ">=0.11", features=["async_tokio"] }
aya-bpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
aya-log = "0.1"
clap = { version = "4.1", features = ["derive"] }
ebpf-balancer-common = { path = "../ebpf-balancer-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }

[[bin]]
name = "ebpf-balancer"
path = "src/main.rs"
